add links in nav and back-to-top button

--- a/practice-projects/01-personal-portfolio/index.html
+++ b/practice-projects/01-personal-portfolio/index.html
@@ -12,9 +12,9 @@
       <h1>Personal Website</h1>
       <nav>
         <ul>
-          <li>Projects</li>
-          <li>About Me</li>
-          <li>Contact</li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -124,5 +124,6 @@
       Copyright &copy; Javier Arce 2025 & Uicons by <a href="https://www.flaticon.com/uicons">Flaticon</a>
     </footer>
   </div>
+  <a href="#" class="back-to-top">↑</a>
 </body>
 </html>
