add custom font via cdn and content divs for footer and header

--- a/practice-projects/01-personal-portfolio/index.html
+++ b/practice-projects/01-personal-portfolio/index.html
@@ -3,20 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
   <title>Personal Portfolio</title>
 </head>
 <body>
   <div class="main-container">
     <header>
-      <h1>Personal Website</h1>
-      <nav>
-        <ul>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#about-me">About Me</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="header-content">
+        <h2>Personal Website</h2>
+        <nav>
+          <ul>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section id="hero">
@@ -91,37 +94,39 @@
       </section>
     </main>
     <footer>
-      <div class="social-container">
-        <div class="left-social">
-          <div class="social-media">
-            <img src="assets/footer/instagram.svg" alt="instagram logo">
-            Instagram
+      <div class="footer-content">
+        <div class="social-container">
+          <div class="left-social">
+            <div class="social-media">
+              <img src="assets/footer/instagram.svg" alt="instagram logo">
+              Instagram
+            </div>
+            <div class="social-media">
+              <img src="assets/footer/linkedin.svg" alt="linkedin logo">
+              LinkedIn
+            </div>
+            <div class="social-media">
+              <img src="assets/footer/github.svg" alt="github logo">
+              GitHub
+            </div>
+            <div class="social-media">
+              <img src="assets/footer/sobre.svg" alt="email logo">
+              Email
+            </div>
           </div>
-          <div class="social-media">
-            <img src="assets/footer/linkedin.svg" alt="linkedin logo">
-            LinkedIn
-          </div>
-          <div class="social-media">
-            <img src="assets/footer/github.svg" alt="github logo">
-            GitHub
-          </div>
-          <div class="social-media">
-            <img src="assets/footer/sobre.svg" alt="email logo">
-            Email
+          <div class="right-social">
+            <div id="social-1">
+              <p class="heading">Email</p>
+              <p>jasearce@espol.edu.ec</p>
+            </div>
+            <div id="social-2">
+              <p class="heading">Skype</p>
+              <p>live:jasearce.espol.edu.ec</p>
+            </div>
           </div>
         </div>
-        <div class="right-social">
-          <div id="social-1">
-            <p class="heading">Email</p>
-            <p>jasearce@espol.edu.ec</p>
-          </div>
-          <div id="social-2">
-            <p class="heading">Skype</p>
-            <p>live:jasearce.espol.edu.ec</p>
-          </div>
-        </div>
+        Copyright &copy; Javier Arce 2025 & Uicons by <a href="https://www.flaticon.com/uicons">Flaticon</a>
       </div>
-      Copyright &copy; Javier Arce 2025 & Uicons by <a href="https://www.flaticon.com/uicons">Flaticon</a>
     </footer>
   </div>
   <a href="#" class="back-to-top">↑</a>
