finish left sections and apply styles to them

--- a/practice-projects/01-personal-portfolio/index.html
+++ b/practice-projects/01-personal-portfolio/index.html
@@ -86,6 +86,7 @@
               <label for="message">Message</label>
               <textarea name="message" id="message" required></textarea>
             </div>
+            <button type="submit">Submit</button>
           </form>
         </div>
         <div class="right-column">
@@ -115,11 +116,11 @@
             </div>
           </div>
           <div class="right-social">
-            <div id="social-1">
+            <div class="social">
               <p class="heading">Email</p>
               <p>jasearce@espol.edu.ec</p>
             </div>
-            <div id="social-2">
+            <div class="social">
               <p class="heading">Skype</p>
               <p>live:jasearce.espol.edu.ec</p>
             </div>
