--- a/01-basic-html-css/odin-etch-a-sketch/index.html
+++ b/01-basic-html-css/odin-etch-a-sketch/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button>Set grid size</button>
+    <div class="buttons-container">
+        <button>Set grid size</button>
+        <div class="more-modes">
+            <span class="options">RGB Colors</span>
+            <label for="checkbox" class="switch">
+                <input type="checkbox" id="checkbox">
+                <span class="slider"></span>
+            </label>
+            <span class="options">Progressive Darkening</span>
+        </div>
+    </div>
     <div class="container">
         <!-- Step 1: 16x16 grid of square divs via DOM methods -->
     </div>
