--- a/03-intermediate-html-css/odin-admin-dashboard/index.html
+++ b/03-intermediate-html-css/odin-admin-dashboard/index.html
@@ -7,6 +7,59 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <h1>Dashboard showing...</h1>
+    <div class="wrapper">
+        <div class="sidebar">
+            <div class="branding">
+                <img src="" alt="">
+                <h1>Dashboard</h1>
+            </div>
+            <nav class="nav-main">
+                <ul>
+                    <li><img src="" alt=""><a target="_blank" rel="noopener noreferrer">Home</a></li>
+                    <li><img src="" alt=""><a target="_blank" rel="noopener noreferrer">Profiles</a></li>
+                    <li><img src="" alt=""><a target="_blank" rel="noopener noreferrer">Messages</a></li>
+                    <li><img src="" alt=""><a target="_blank" rel="noopener noreferrer">History</a></li>
+                    <li><img src="" alt=""><a target="_blank" rel="noopener noreferrer">Tasks</a></li>
+                    <li><img src="" alt=""><a target="_blank" rel="noopener noreferrer">History</a></li>
+                    <li><img src="" alt=""><a target="_blank" rel="noopener noreferrer">Commnunities</a></li>
+                </ul>
+            </nav>
+            <div class="nav-footer">
+                <ul>
+                    <li><img src="" alt=""><a target="_blank" rel="noopener noreferrer">Settings</a></li>
+                    <li><img src="" alt=""><a target="_blank" rel="noopener noreferrer">Support</a></li>
+                    <li><img src="" alt=""><a target="_blank" rel="noopener noreferrer">Privacy</a></li>
+                </ul>
+            </div>
+        </div>
+        <header>
+            <div class="search">
+                <img src="" alt="">
+                <input type="text" class="search-bar" name="search-bar">
+            </div>
+            <div class="notification"><img src="" alt=""></div>
+            <div class="avatar">
+                <div class="icon">
+                    <img src="" alt="">
+                </div>
+                <span class="avatar__name">Morgan Oakley</span>
+            </div>
+            <div class="greeting">
+                <div class="icon">
+                    <img src="" alt="">
+                </div>
+                <div class="greeting__wrapper">
+                    <span>Hi there,</span>
+                    <h3>Morgan Oakley (@morgan)</h3>
+                </div>
+            </div>
+            <div class="button-group">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </header>
+        <main>main content</main>
+    </div>
 </body>
 </html>
